--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,12 @@
 html {
   scroll-behavior: smooth;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
